--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@ var el = new PhotoCarousel({
 	data : data, // * necessary
 	id : 'photo-carousel', // * necessary
 	max : 10, // default 10
-	sensibility : 1 // default 1
+	sensibility : 1, // default 1
+	interval: 5 // default 5
 });
 el.init();
 
