--- a/index.html
+++ b/index.html
@@ -28,23 +28,26 @@ var imagess = [
 ]
 var data = [
 	{
-		url:'#'
+		url:'#' 
+		/* no address */
 	},
 	{
-		url:'www.baidu.com'
+		url:'https://github.com/xuzijie1995/Photo-Carousel' 
+		/*no 'https://' or 'http://', 'http://' will be added automatically 
+		& u can change this in photo-carousel.js line 227*/
 	},
 	{
-		url:'javascript:void(0)'
+		url:'javascript:void(0)' 
+		/* no address */
 	}
 ]
-
 var el = new PhotoCarousel({
-	images : imagess, // * necessary
-	data : data, // * necessary
-	id : 'photo-carousel', // * necessary
-	max : 10, // default 10
-	sensibility : 1, // default 1
-	interval: 5 // default 5
+	images : imagess, 		// * necessary
+	data : data, 			// * necessary
+	id : 'photo-carousel', 		// * necessary
+	max : 10, 			//default 10, unnecessary, the max (%) for next picture u can see when dragging, 0<max<100
+	sensibility : 1,		//unnecessary, default 1, sensibility when dragging, but I suggest sensibility=max/10
+	interval: 5 			//unnecessary, default 5(s), seconds for scroll automatically
 });
 el.init();
 
